meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__buddyinfo__tests__differing_columns.snap
---
source: memfaultd/src/metrics/system_metrics/buddyinfo.rs
expression: readings
---
[
  {
    "name": "memory/buddyinfo/order_0",
    "value": {
      "Histogram": {
        "value": 1065.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_1",
    "value": {
      "Histogram": {
        "value": 882.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_2",
    "value": {
      "Histogram": {
        "value": 608.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_3",
    "value": {
      "Histogram": {
        "value": 351.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_4",
    "value": {
      "Histogram": {
        "value": 205.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_5",
    "value": {
      "Histogram": {
        "value": 96.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_6",
    "value": {
      "Histogram": {
        "value": 45.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_7",
    "value": {
      "Histogram": {
        "value": 18.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_8",
    "value": {
      "Histogram": {
        "value": 4.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_9",
    "value": {
      "Histogram": {
        "value": 1.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/buddyinfo/order_10",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  }
]
